# UnconstrainedEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PhysicsEngine.cbp  build.sh  clear.sh  imgui.ini
3D/: Mercy2.mtl  Model.mtl  Yen.mtl
Dependencies/Include/: BVH.h  BoundingVolumes.h  Camera.h  Colliders.h  CollisionAlgos.h  Common.h  Common.h~  Constraint.h  Debug.h  Mesh.h  ObjLoad.h  Octree.h  PhysicsWorld.h  RigidBody.h  Shader.h  Vertex.h  vec3.h
Dependencies/Shaders/: simpleFrag.glsl  simpleVert.glsl
Dependencies/Source/: BVH.cpp  BoundingVolumes.cpp  Camera.cpp  Colliders.cpp  CollisionAlgos.cpp  CollisionAlgos.cpp~  Constraint.cpp  Debug.cpp  Main.cpp  Mesh.cpp  ObjLoad.cpp  Octree.cpp  PhysicsWorld.cpp  RigidBody.cpp  Shader.cpp
